--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.github.mangelt</groupId>
 	<artifactId>config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>lab1-1</name>
-	<description>Creting a sprint config server using Amazon S3</description>
+	<name>config-server</name>
+	<description>Creting a spring config server using Amazon S3</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.0</spring-cloud.version>
@@ -25,6 +25,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
